--- a/AndEngineUbicompTest/res/values/strings.xml
+++ b/AndEngineUbicompTest/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="hello">Hello World, Main!</string>
     <string name="app_name">Testes AndEngine</string>
+    <string name="serviceStatus">Service Status</string>
 </resources>
